feat(admin): implement add movie functionality & database integration using sql transaction
