# controllers/admin.controller.go
@@ -1,0 +1,46 @@
+package controllers
+
+import (
+	"be-cinevo/dto"
+	"be-cinevo/models"
+	"be-cinevo/utils"
+	"github.com/gin-gonic/gin"
+	"net/http"
+)
+
+func AddMovie(ctx *gin.Context) {
+	role, _ := ctx.Get("role")
+	if role != "admin" {
+		ctx.JSON(http.StatusForbidden, utils.Response{
+			Success: false,
+			Message: "Forbidden: Only admin can add movies",
+		})
+		return
+	}
+
+	var req dto.MovieRequest
+	if err := ctx.ShouldBindJSON(&req); err != nil {
+		ctx.JSON(http.StatusBadRequest, utils.Response{
+			Success: false,
+			Message: "Invalid request format",
+			Errors:  err.Error(),
+		})
+		return
+	}
+
+	result, err := models.CreateNewMovie(req)
+	if err != nil {
+		ctx.JSON(http.StatusInternalServerError, utils.Response{
+			Success: false,
+			Message: "Failed to add movie",
+			Errors:  err.Error(),
+		})
+		return
+	}
+
+	ctx.JSON(http.StatusCreated, utils.Response{
+		Success: true,
+		Message: "Movie added successfully",
+		Results: result,
+	})
+}
