# routers/main.router.go
@@ -12,6 +12,7 @@ import (
 func CombineRouters(r *gin.Engine) {
 	authRouters(r.Group("/auth"))
 	movieRouters(r.Group("/movies"))
+	adminRouters(r.Group("/admin"))
 	docs.SwaggerInfo.BasePath = "/"
 	r.GET("/docs/*any", ginSwagger.WrapHandler(swaggerfiles.Handler))
 }
